@@ -19,6 +19,7 @@ _____________________
 		-KeyboardZone now has the following additional methods: clearKeyListeners(), getZoneKeyListeners(), getKeyListeners()
 		-Touch now has getAssignedZones(), assignZone(), unassignZone(), and getPathPoints()
 		-Zone now has toss(), which uses a physics engine to simulate tossing the Zone
+		-TouchClient.createStaticBox() will create a box that interacts with the physics engine, and by default these already exist at the edges of the screen
 
 	Feature Changes:
 		-TextZone now selects(highlights)/unblurs when moving across the text to the right, and unselects(unhighlights)/blurs when moving across the text to the left 
